--- a/src/components/Layout/Layout.styles.css
+++ b/src/components/Layout/Layout.styles.css
@@ -1,9 +1,19 @@
 .container {
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: -3rem;
+  /* margin-top: -3rem; */
+}
+
+.homepage {
+  width: 100%;
+}
+
+@media only screen and (max-width: 1000px) {
+  .homepage {
+    width: 80%;
+  }
 }
