--- a/src/global.css
+++ b/src/global.css
@@ -18,7 +18,7 @@ body {
   margin: 0;
   padding: 0;
   text-rendering: optimizeLegibility;
-  background-image: linear-gradient(
+  /* background-image: linear-gradient(
     120deg,
     #eea2a2 0,
     #bbc1bf 19%,
@@ -30,7 +30,7 @@ body {
   background-position: var(--bg-position);
   transition: background-position 2s ease;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -moz-osx-font-smoothing: grayscale; */
 }
 
 .separator::before {
@@ -50,7 +50,6 @@ a:active {
 }
 
 .container {
-  max-width: 1200px;
   width: 90%;
   margin: 0 auto;
 }
