--- a/src/global.css
+++ b/src/global.css
@@ -50,6 +50,12 @@ a:active {
 }
 
 .container {
-  width: 90%;
+  width: 100%;
   margin: 0 auto;
+  padding: 0 2rem;
+}
+
+.container.dark {
+  background-color: rgb(66, 60, 90);
+  color: white;
 }
